Added more cards

--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
 
           <figcaption>Dota 2<br />Dean</figcaption>
         </figure>
+        
+        <figure class="card">
+          <img src="src/Nayan.png" />
+
+          <figcaption>Dota 2<br />Dean</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="src/Nayan.png" />
+
+          <figcaption>KoseBoz!</figcaption>
+        </figure>
+      </div>
+      <div class="cards">
+        <figure class="card">
+          <img src="src/Nayan.png" />
+
+          <figcaption>Dota 2<br />Dean</figcaption>
+        </figure>
+        
+        <figure class="card">
+          <img src="src/Nayan.png" />
+
+          <figcaption>Dota 2<br />Dean</figcaption>
+        </figure>
 
         <figure class="card">
           <img src="src/Nayan.png" />
