Something for real

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Launch Of Atharva</title>
+    <title>Launch Of GSFC Chat Bot</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="cards.css" />
+    <!-- <link rel="stylesheet" href="cards.css" /> -->
   </head>
   <body>
     <div class="circle circle-left"></div>
@@ -14,7 +14,7 @@
     <main>
       <div class="main-container">
         <h1 class="main-heading">
-          Ask your query<br />with glory to <span>Atharva</span>
+          Ask your query<br />with glory to <span>Chat Bot</span>
         </h1>
         <p>
           Getting information about GSFC University now got better with the
@@ -44,55 +44,99 @@
     <section id="team">
       <h1 class="main-heading mb-3">Meet the <span>Team</span></h1>
       <div class="cards">
+        <div class="card">
+          <img src="./src/saurabh.png">
+          <h2>Avneet Saluja</h2>
+          <p>Designation</p>
+        </div>
+        <div class="card">
+          <img src="./src/avneet.png">
+          <h2>Avneet Saluja</h2>
+          <p>Designation</p>
+        </div>
+        <div class="card">
+          <img src="./src/pranav.png">
+          <h2>Avneet Saluja</h2>
+          <p>Designation</p>
+        </div>
+      </div>
+      <div class="cards">
+        <div class="card">
+          <img src="./src/kshipra.png">
+          <h2>Avneet Saluja</h2>
+          <p>Designation</p>
+        </div>
+        <div class="card">
+          <img src="./src/varada.png">
+          <h2>Avneet Saluja</h2>
+          <p>Designation</p>
+        </div>
+        <div class="card">
+          <img src="./src/hasti.png">
+          <h2>Avneet Saluja</h2>
+          <p>Designation</p>
+        </div>
+        <div class="card">
+          <img src="./src/nayan.png">
+          <h2>Avneet Saluja</h2>
+          <p>Designation</p>
+        </div>
+        <div class="card">
+          <img src="./src/dhruvin.png">
+          <h2>Avneet Saluja</h2>
+          <p>Designation</p>
+        </div>
+      </div>
+      <!-- <div class="cards">
         <figure class="card">
-          <img src="src/Nayan.png" />
+          <img src="src/saurabh.png" />
 
           <figcaption>Dota 2<br />Dean</figcaption>
         </figure>
         
         <figure class="card">
-          <img src="src/Nayan.png" />
+          <img src="src/avneet.png" />
 
           <figcaption>Dota 2<br />Dean</figcaption>
         </figure>
 
         <figure class="card">
-          <img src="src/Nayan.png" />
+          <img src="src/pranav.png" />
 
           <figcaption>KoseBoz!</figcaption>
         </figure>
       </div>
       <div class="cards">
         <figure class="card">
-          <img src="src/Nayan.png" />
+          <img src="src/kshipra.png" />
 
           <figcaption>Dota 2<br />Dean</figcaption>
         </figure>
         
         <figure class="card">
-          <img src="src/Nayan.png" />
+          <img src="src/varada.png" />
 
           <figcaption>Dota 2<br />Dean</figcaption>
         </figure>
 
         <figure class="card">
-          <img src="src/Nayan.png" />
+          <img src="src/hasti.png" />
 
           <figcaption>Stick Fight</figcaption>
         </figure>
 
         <figure class="card">
-          <img src="src/Nayan.png" />
+          <img src="src/nayan.png" />
 
           <figcaption>Minion Masters</figcaption>
         </figure>
 
         <figure class="card">
-          <img src="src/Nayan.png" />
+          <img src="src/dhruvin.png" />
 
           <figcaption>KoseBoz!</figcaption>
         </figure>
-      </div>
+      </div> -->
     </section>
   </body>
 </html>
