--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           </div>
         </button>
       </div>
+      <img class="hero-image" src="./src/p-k-taneja.png">
     </main>
 
     <section id="team">
