Changed Page title and Hero text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Launch Of GSFC Chat Bot</title>
+    <title>Launch Of GSFC Virtual Assistant</title>
     <link rel="stylesheet" href="style.css" />
     <!-- <link rel="stylesheet" href="cards.css" /> -->
   </head>
@@ -14,7 +14,7 @@
     <main>
       <div class="main-container">
         <h1 class="main-heading">
-          Ask your query<br />with glory to <span>Chat Bot</span>
+            Ask your query with glory to <span><br/>GSFCU Virtual Assistant</span>
         </h1>
         <p>
           Getting information about GSFC University now got better with the
