Removed Atharva from one place

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </h1>
         <p>
           Getting information about GSFC University now got better with the
-          chatbot - Atharva.<br />Ask your queries and get the answers
+          GSFCU Virtual Assistant.<br />Ask your queries and get the answers
           instantly.
         </p>
         <button class="cssbuttons-io-button">
