--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="circle circle-right"></div>
     <main>
       <div class="main-container">
-        <h1 class="main-heading">
+        <h1 class="main-heading" style="text-align: left;">
           Ask your query<br />with glory to <span>Chat Bot</span>
         </h1>
         <p>
@@ -42,7 +42,7 @@
       <img class="hero-image" src="./src/p-k-taneja.png">
     </main>
 
-    <section id="team">
+    <section id="team" style="padding-top: 5rem; border-top: 2px solid #ccc;">
       <h1 class="main-heading mb-3">Meet the <span>Team</span></h1>
       <div class="cards">
         <div class="card">
